# paste

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker-publish.yml
src/: main.rs
static/: index.html  style.css  view.html
