[package]
name = "paste"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "net"] }
serde = { version = "1.0.228", features = ["derive"] }
tower-http = { version = "0.6.8", features = ["fs"] }
rand = "0.10.0"
chrono = "0.4.44"
